--- a/_components.scss
+++ b/_components.scss
@@ -1,3 +1,68 @@
-*{
-    background-color: #8FBABC;
+@use "./variables" as *;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: $font-family;
+  background-color: $color-text;
+  //  color:white;
+}
+
+header {
+  background: $color-secondary;
+  height: 100px;
+  padding: 30px;
+  .title {
+    text-align: center;
+    background-color: $color-secondary;
+    color: $color-primary;
+  }
+}
+.score-board {
+  margin: 5rem auto;
+  border: 3px solid white;
+  border-radius: 10px;
+  text-align: center;
+  width: 15rem;
+  height: 10rem;
+  color: white;
+  font-size: 50px;
+  position: relative;
+  padding: 47px;
+  &__player {
+    padding: 4px;
+    border-radius: 10px;
+    background-color: $color-divs;
+    position: absolute;
+    top: 50px;
+    left: -8rem;
+    font-size: 40px;
+  }
+  &__comp {
+    padding: 4px;
+    position: absolute;
+    left: 14rem;
+    background-color: $color-divs;
+    border-radius: 10px;
+    top: 50px;
+    font-size: 40px;
+  }
+}
+.result {
+  font-size: 3rem;
+
+  .result__display {
+    text-align: center;
+  }
+}
+
+.images {
+  display: flex;
+}
+.rock,
+.paper,
+.scissor
+{
+   width:10rem;
 }
